qt/gen_qplaintextedit.h

typedef struct QMenu QMenu;
typedef struct QMetaObject QMetaObject;
typedef struct QPagedPaintDevice QPagedPaintDevice;
typedef struct QPlainTextEdit QPlainTextEdit;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegExp QRegExp;
typedef struct QRegularExpression QRegularExpression;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextCursor QTextCursor;
typedef struct QTextDocument QTextDocument;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QPlainTextEdit* QPlainTextEdit_new(QWidget* parent);
QPlainTextEdit* QPlainTextEdit_new2();
QPlainTextEdit* QPlainTextEdit_new3(struct miqt_string text);
QPlainTextEdit* QPlainTextEdit_new4(struct miqt_string text, QWidget* parent);
QMetaObject* QPlainTextEdit_metaObject(const QPlainTextEdit* self);
void* QPlainTextEdit_metacast(QPlainTextEdit* self, const char* param1);
int QPlainTextEdit_metacall(QPlainTextEdit* self, int param1, int param2, void** param3);
struct miqt_string QPlainTextEdit_tr(const char* s);
struct miqt_string QPlainTextEdit_trUtf8(const char* s);
void QPlainTextEdit_setDocument(QPlainTextEdit* self, QTextDocument* document);
QTextDocument* QPlainTextEdit_document(const QPlainTextEdit* self);
void QPlainTextEdit_setPlaceholderText(QPlainTextEdit* self, struct miqt_string placeholderText);
struct miqt_string QPlainTextEdit_placeholderText(const QPlainTextEdit* self);
void QPlainTextEdit_setTextCursor(QPlainTextEdit* self, QTextCursor* cursor);
QTextCursor* QPlainTextEdit_textCursor(const QPlainTextEdit* self);
bool QPlainTextEdit_isReadOnly(const QPlainTextEdit* self);
void QPlainTextEdit_setReadOnly(QPlainTextEdit* self, bool ro);
void QPlainTextEdit_setTextInteractionFlags(QPlainTextEdit* self, int flags);
int QPlainTextEdit_textInteractionFlags(const QPlainTextEdit* self);
void QPlainTextEdit_mergeCurrentCharFormat(QPlainTextEdit* self, QTextCharFormat* modifier);
void QPlainTextEdit_setCurrentCharFormat(QPlainTextEdit* self, QTextCharFormat* format);
QTextCharFormat* QPlainTextEdit_currentCharFormat(const QPlainTextEdit* self);
bool QPlainTextEdit_tabChangesFocus(const QPlainTextEdit* self);
void QPlainTextEdit_setTabChangesFocus(QPlainTextEdit* self, bool b);
void QPlainTextEdit_setDocumentTitle(QPlainTextEdit* self, struct miqt_string title);
struct miqt_string QPlainTextEdit_documentTitle(const QPlainTextEdit* self);
bool QPlainTextEdit_isUndoRedoEnabled(const QPlainTextEdit* self);
void QPlainTextEdit_setUndoRedoEnabled(QPlainTextEdit* self, bool enable);
void QPlainTextEdit_setMaximumBlockCount(QPlainTextEdit* self, int maximum);
int QPlainTextEdit_maximumBlockCount(const QPlainTextEdit* self);
int QPlainTextEdit_lineWrapMode(const QPlainTextEdit* self);
void QPlainTextEdit_setLineWrapMode(QPlainTextEdit* self, int mode);
int QPlainTextEdit_wordWrapMode(const QPlainTextEdit* self);
void QPlainTextEdit_setWordWrapMode(QPlainTextEdit* self, int policy);
void QPlainTextEdit_setBackgroundVisible(QPlainTextEdit* self, bool visible);
bool QPlainTextEdit_backgroundVisible(const QPlainTextEdit* self);
void QPlainTextEdit_setCenterOnScroll(QPlainTextEdit* self, bool enabled);
bool QPlainTextEdit_centerOnScroll(const QPlainTextEdit* self);
bool QPlainTextEdit_find(QPlainTextEdit* self, struct miqt_string exp);
bool QPlainTextEdit_findWithExp(QPlainTextEdit* self, QRegExp* exp);
bool QPlainTextEdit_find2(QPlainTextEdit* self, QRegularExpression* exp);
struct miqt_string QPlainTextEdit_toPlainText(const QPlainTextEdit* self);
void QPlainTextEdit_ensureCursorVisible(QPlainTextEdit* self);
QVariant* QPlainTextEdit_loadResource(QPlainTextEdit* self, int type, QUrl* name);
QMenu* QPlainTextEdit_createStandardContextMenu(QPlainTextEdit* self);
QMenu* QPlainTextEdit_createStandardContextMenuWithPosition(QPlainTextEdit* self, QPoint* position);
QTextCursor* QPlainTextEdit_cursorForPosition(const QPlainTextEdit* self, QPoint* pos);
QRect* QPlainTextEdit_cursorRect(const QPlainTextEdit* self, QTextCursor* cursor);
QRect* QPlainTextEdit_cursorRect2(const QPlainTextEdit* self);
struct miqt_string QPlainTextEdit_anchorAt(const QPlainTextEdit* self, QPoint* pos);
bool QPlainTextEdit_overwriteMode(const QPlainTextEdit* self);
void QPlainTextEdit_setOverwriteMode(QPlainTextEdit* self, bool overwrite);
int QPlainTextEdit_tabStopWidth(const QPlainTextEdit* self);
void QPlainTextEdit_setTabStopWidth(QPlainTextEdit* self, int width);
double QPlainTextEdit_tabStopDistance(const QPlainTextEdit* self);
void QPlainTextEdit_setTabStopDistance(QPlainTextEdit* self, double distance);
int QPlainTextEdit_cursorWidth(const QPlainTextEdit* self);
void QPlainTextEdit_setCursorWidth(QPlainTextEdit* self, int width);
void QPlainTextEdit_setExtraSelections(QPlainTextEdit* self, struct miqt_array /* of QTextEdit__ExtraSelection* */  selections);
struct miqt_array /* of QTextEdit__ExtraSelection* */  QPlainTextEdit_extraSelections(const QPlainTextEdit* self);
void QPlainTextEdit_moveCursor(QPlainTextEdit* self, int operation);
bool QPlainTextEdit_canPaste(const QPlainTextEdit* self);
void QPlainTextEdit_print(const QPlainTextEdit* self, QPagedPaintDevice* printer);
int QPlainTextEdit_blockCount(const QPlainTextEdit* self);
QVariant* QPlainTextEdit_inputMethodQuery(const QPlainTextEdit* self, int property);
QVariant* QPlainTextEdit_inputMethodQuery2(const QPlainTextEdit* self, int query, QVariant* argument);
void QPlainTextEdit_setPlainText(QPlainTextEdit* self, struct miqt_string text);
void QPlainTextEdit_cut(QPlainTextEdit* self);
void QPlainTextEdit_copy(QPlainTextEdit* self);
void QPlainTextEdit_paste(QPlainTextEdit* self);
void QPlainTextEdit_undo(QPlainTextEdit* self);
void QPlainTextEdit_redo(QPlainTextEdit* self);
void QPlainTextEdit_clear(QPlainTextEdit* self);
void QPlainTextEdit_selectAll(QPlainTextEdit* self);
void QPlainTextEdit_insertPlainText(QPlainTextEdit* self, struct miqt_string text);
void QPlainTextEdit_appendPlainText(QPlainTextEdit* self, struct miqt_string text);
void QPlainTextEdit_appendHtml(QPlainTextEdit* self, struct miqt_string html);
void QPlainTextEdit_centerCursor(QPlainTextEdit* self);
void QPlainTextEdit_zoomIn(QPlainTextEdit* self);
void QPlainTextEdit_zoomOut(QPlainTextEdit* self);
void QPlainTextEdit_textChanged(QPlainTextEdit* self);
void QPlainTextEdit_connect_textChanged(QPlainTextEdit* self, intptr_t slot);
void QPlainTextEdit_undoAvailable(QPlainTextEdit* self, bool b);
void QPlainTextEdit_connect_undoAvailable(QPlainTextEdit* self, intptr_t slot);
void QPlainTextEdit_redoAvailable(QPlainTextEdit* self, bool b);
void QPlainTextEdit_connect_redoAvailable(QPlainTextEdit* self, intptr_t slot);
void QPlainTextEdit_copyAvailable(QPlainTextEdit* self, bool b);
void QPlainTextEdit_connect_copyAvailable(QPlainTextEdit* self, intptr_t slot);
void QPlainTextEdit_selectionChanged(QPlainTextEdit* self);
void QPlainTextEdit_connect_selectionChanged(QPlainTextEdit* self, intptr_t slot);
void QPlainTextEdit_cursorPositionChanged(QPlainTextEdit* self);
void QPlainTextEdit_connect_cursorPositionChanged(QPlainTextEdit* self, intptr_t slot);
void QPlainTextEdit_updateRequest(QPlainTextEdit* self, QRect* rect, int dy);
void QPlainTextEdit_connect_updateRequest(QPlainTextEdit* self, intptr_t slot);
void QPlainTextEdit_blockCountChanged(QPlainTextEdit* self, int newBlockCount);
void QPlainTextEdit_connect_blockCountChanged(QPlainTextEdit* self, intptr_t slot);
void QPlainTextEdit_modificationChanged(QPlainTextEdit* self, bool param1);
void QPlainTextEdit_connect_modificationChanged(QPlainTextEdit* self, intptr_t slot);
struct miqt_string QPlainTextEdit_tr2(const char* s, const char* c);
struct miqt_string QPlainTextEdit_tr3(const char* s, const char* c, int n);
struct miqt_string QPlainTextEdit_trUtf82(const char* s, const char* c);
struct miqt_string QPlainTextEdit_trUtf83(const char* s, const char* c, int n);
bool QPlainTextEdit_find22(QPlainTextEdit* self, struct miqt_string exp, int options);
bool QPlainTextEdit_find23(QPlainTextEdit* self, QRegExp* exp, int options);