qt/gen_qplaintextedit.nim


proc fcQPlainTextEdit_new(parent: pointer): ptr cQPlainTextEdit {.importc: "QPlainTextEdit_new".}
proc fcQPlainTextEdit_new2(): ptr cQPlainTextEdit {.importc: "QPlainTextEdit_new2".}
proc fcQPlainTextEdit_new3(text: struct_miqt_string): ptr cQPlainTextEdit {.importc: "QPlainTextEdit_new3".}
proc fcQPlainTextEdit_new4(text: struct_miqt_string, parent: pointer): ptr cQPlainTextEdit {.importc: "QPlainTextEdit_new4".}
proc fcQPlainTextEdit_metaObject(self: pointer, ): pointer {.importc: "QPlainTextEdit_metaObject".}
proc fcQPlainTextEdit_metacast(self: pointer, param1: cstring): pointer {.importc: "QPlainTextEdit_metacast".}
proc fcQPlainTextEdit_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QPlainTextEdit_metacall".}
proc fcQPlainTextEdit_tr(s: cstring): struct_miqt_string {.importc: "QPlainTextEdit_tr".}
proc fcQPlainTextEdit_trUtf8(s: cstring): struct_miqt_string {.importc: "QPlainTextEdit_trUtf8".}
proc fcQPlainTextEdit_setDocument(self: pointer, document: pointer): void {.importc: "QPlainTextEdit_setDocument".}
proc fcQPlainTextEdit_document(self: pointer, ): pointer {.importc: "QPlainTextEdit_document".}
proc fcQPlainTextEdit_setPlaceholderText(self: pointer, placeholderText: struct_miqt_string): void {.importc: "QPlainTextEdit_setPlaceholderText".}
proc fcQPlainTextEdit_placeholderText(self: pointer, ): struct_miqt_string {.importc: "QPlainTextEdit_placeholderText".}
proc fcQPlainTextEdit_setTextCursor(self: pointer, cursor: pointer): void {.importc: "QPlainTextEdit_setTextCursor".}
proc fcQPlainTextEdit_textCursor(self: pointer, ): pointer {.importc: "QPlainTextEdit_textCursor".}
proc fcQPlainTextEdit_isReadOnly(self: pointer, ): bool {.importc: "QPlainTextEdit_isReadOnly".}
proc fcQPlainTextEdit_setReadOnly(self: pointer, ro: bool): void {.importc: "QPlainTextEdit_setReadOnly".}
proc fcQPlainTextEdit_setTextInteractionFlags(self: pointer, flags: cint): void {.importc: "QPlainTextEdit_setTextInteractionFlags".}
proc fcQPlainTextEdit_textInteractionFlags(self: pointer, ): cint {.importc: "QPlainTextEdit_textInteractionFlags".}
proc fcQPlainTextEdit_mergeCurrentCharFormat(self: pointer, modifier: pointer): void {.importc: "QPlainTextEdit_mergeCurrentCharFormat".}
proc fcQPlainTextEdit_setCurrentCharFormat(self: pointer, format: pointer): void {.importc: "QPlainTextEdit_setCurrentCharFormat".}
proc fcQPlainTextEdit_currentCharFormat(self: pointer, ): pointer {.importc: "QPlainTextEdit_currentCharFormat".}
proc fcQPlainTextEdit_tabChangesFocus(self: pointer, ): bool {.importc: "QPlainTextEdit_tabChangesFocus".}
proc fcQPlainTextEdit_setTabChangesFocus(self: pointer, b: bool): void {.importc: "QPlainTextEdit_setTabChangesFocus".}
proc fcQPlainTextEdit_setDocumentTitle(self: pointer, title: struct_miqt_string): void {.importc: "QPlainTextEdit_setDocumentTitle".}
proc fcQPlainTextEdit_documentTitle(self: pointer, ): struct_miqt_string {.importc: "QPlainTextEdit_documentTitle".}
proc fcQPlainTextEdit_isUndoRedoEnabled(self: pointer, ): bool {.importc: "QPlainTextEdit_isUndoRedoEnabled".}
proc fcQPlainTextEdit_setUndoRedoEnabled(self: pointer, enable: bool): void {.importc: "QPlainTextEdit_setUndoRedoEnabled".}
proc fcQPlainTextEdit_setMaximumBlockCount(self: pointer, maximum: cint): void {.importc: "QPlainTextEdit_setMaximumBlockCount".}
proc fcQPlainTextEdit_maximumBlockCount(self: pointer, ): cint {.importc: "QPlainTextEdit_maximumBlockCount".}
proc fcQPlainTextEdit_lineWrapMode(self: pointer, ): cint {.importc: "QPlainTextEdit_lineWrapMode".}
proc fcQPlainTextEdit_setLineWrapMode(self: pointer, mode: cint): void {.importc: "QPlainTextEdit_setLineWrapMode".}
proc fcQPlainTextEdit_wordWrapMode(self: pointer, ): cint {.importc: "QPlainTextEdit_wordWrapMode".}
proc fcQPlainTextEdit_setWordWrapMode(self: pointer, policy: cint): void {.importc: "QPlainTextEdit_setWordWrapMode".}
proc fcQPlainTextEdit_setBackgroundVisible(self: pointer, visible: bool): void {.importc: "QPlainTextEdit_setBackgroundVisible".}
proc fcQPlainTextEdit_backgroundVisible(self: pointer, ): bool {.importc: "QPlainTextEdit_backgroundVisible".}
proc fcQPlainTextEdit_setCenterOnScroll(self: pointer, enabled: bool): void {.importc: "QPlainTextEdit_setCenterOnScroll".}
proc fcQPlainTextEdit_centerOnScroll(self: pointer, ): bool {.importc: "QPlainTextEdit_centerOnScroll".}
proc fcQPlainTextEdit_find(self: pointer, exp: struct_miqt_string): bool {.importc: "QPlainTextEdit_find".}
proc fcQPlainTextEdit_findWithExp(self: pointer, exp: pointer): bool {.importc: "QPlainTextEdit_findWithExp".}
proc fcQPlainTextEdit_find2(self: pointer, exp: pointer): bool {.importc: "QPlainTextEdit_find2".}
proc fcQPlainTextEdit_toPlainText(self: pointer, ): struct_miqt_string {.importc: "QPlainTextEdit_toPlainText".}
proc fcQPlainTextEdit_ensureCursorVisible(self: pointer, ): void {.importc: "QPlainTextEdit_ensureCursorVisible".}
proc fcQPlainTextEdit_loadResource(self: pointer, typeVal: cint, name: pointer): pointer {.importc: "QPlainTextEdit_loadResource".}
proc fcQPlainTextEdit_createStandardContextMenu(self: pointer, ): pointer {.importc: "QPlainTextEdit_createStandardContextMenu".}
proc fcQPlainTextEdit_createStandardContextMenuWithPosition(self: pointer, position: pointer): pointer {.importc: "QPlainTextEdit_createStandardContextMenuWithPosition".}
proc fcQPlainTextEdit_cursorForPosition(self: pointer, pos: pointer): pointer {.importc: "QPlainTextEdit_cursorForPosition".}
proc fcQPlainTextEdit_cursorRect(self: pointer, cursor: pointer): pointer {.importc: "QPlainTextEdit_cursorRect".}
proc fcQPlainTextEdit_cursorRect2(self: pointer, ): pointer {.importc: "QPlainTextEdit_cursorRect2".}
proc fcQPlainTextEdit_anchorAt(self: pointer, pos: pointer): struct_miqt_string {.importc: "QPlainTextEdit_anchorAt".}
proc fcQPlainTextEdit_overwriteMode(self: pointer, ): bool {.importc: "QPlainTextEdit_overwriteMode".}
proc fcQPlainTextEdit_setOverwriteMode(self: pointer, overwrite: bool): void {.importc: "QPlainTextEdit_setOverwriteMode".}
proc fcQPlainTextEdit_tabStopWidth(self: pointer, ): cint {.importc: "QPlainTextEdit_tabStopWidth".}
proc fcQPlainTextEdit_setTabStopWidth(self: pointer, width: cint): void {.importc: "QPlainTextEdit_setTabStopWidth".}
proc fcQPlainTextEdit_tabStopDistance(self: pointer, ): float64 {.importc: "QPlainTextEdit_tabStopDistance".}
proc fcQPlainTextEdit_setTabStopDistance(self: pointer, distance: float64): void {.importc: "QPlainTextEdit_setTabStopDistance".}
proc fcQPlainTextEdit_cursorWidth(self: pointer, ): cint {.importc: "QPlainTextEdit_cursorWidth".}
proc fcQPlainTextEdit_setCursorWidth(self: pointer, width: cint): void {.importc: "QPlainTextEdit_setCursorWidth".}
proc fcQPlainTextEdit_setExtraSelections(self: pointer, selections: struct_miqt_array): void {.importc: "QPlainTextEdit_setExtraSelections".}
proc fcQPlainTextEdit_extraSelections(self: pointer, ): struct_miqt_array {.importc: "QPlainTextEdit_extraSelections".}
proc fcQPlainTextEdit_moveCursor(self: pointer, operation: cint): void {.importc: "QPlainTextEdit_moveCursor".}
proc fcQPlainTextEdit_canPaste(self: pointer, ): bool {.importc: "QPlainTextEdit_canPaste".}
proc fcQPlainTextEdit_print(self: pointer, printer: pointer): void {.importc: "QPlainTextEdit_print".}
proc fcQPlainTextEdit_blockCount(self: pointer, ): cint {.importc: "QPlainTextEdit_blockCount".}
proc fcQPlainTextEdit_inputMethodQuery(self: pointer, property: cint): pointer {.importc: "QPlainTextEdit_inputMethodQuery".}
proc fcQPlainTextEdit_inputMethodQuery2(self: pointer, query: cint, argument: pointer): pointer {.importc: "QPlainTextEdit_inputMethodQuery2".}
proc fcQPlainTextEdit_setPlainText(self: pointer, text: struct_miqt_string): void {.importc: "QPlainTextEdit_setPlainText".}
proc fcQPlainTextEdit_cut(self: pointer, ): void {.importc: "QPlainTextEdit_cut".}
proc fcQPlainTextEdit_copy(self: pointer, ): void {.importc: "QPlainTextEdit_copy".}
proc fcQPlainTextEdit_paste(self: pointer, ): void {.importc: "QPlainTextEdit_paste".}
proc fcQPlainTextEdit_undo(self: pointer, ): void {.importc: "QPlainTextEdit_undo".}
proc fcQPlainTextEdit_redo(self: pointer, ): void {.importc: "QPlainTextEdit_redo".}
proc fcQPlainTextEdit_clear(self: pointer, ): void {.importc: "QPlainTextEdit_clear".}
proc fcQPlainTextEdit_selectAll(self: pointer, ): void {.importc: "QPlainTextEdit_selectAll".}
proc fcQPlainTextEdit_insertPlainText(self: pointer, text: struct_miqt_string): void {.importc: "QPlainTextEdit_insertPlainText".}
proc fcQPlainTextEdit_appendPlainText(self: pointer, text: struct_miqt_string): void {.importc: "QPlainTextEdit_appendPlainText".}
proc fcQPlainTextEdit_appendHtml(self: pointer, html: struct_miqt_string): void {.importc: "QPlainTextEdit_appendHtml".}
proc fcQPlainTextEdit_centerCursor(self: pointer, ): void {.importc: "QPlainTextEdit_centerCursor".}
proc fcQPlainTextEdit_zoomIn(self: pointer, ): void {.importc: "QPlainTextEdit_zoomIn".}
proc fcQPlainTextEdit_zoomOut(self: pointer, ): void {.importc: "QPlainTextEdit_zoomOut".}
proc fcQPlainTextEdit_textChanged(self: pointer, ): void {.importc: "QPlainTextEdit_textChanged".}
proc fQPlainTextEdit_connect_textChanged(self: pointer, slot: int) {.importc: "QPlainTextEdit_connect_textChanged".}
proc fcQPlainTextEdit_undoAvailable(self: pointer, b: bool): void {.importc: "QPlainTextEdit_undoAvailable".}
proc fQPlainTextEdit_connect_undoAvailable(self: pointer, slot: int) {.importc: "QPlainTextEdit_connect_undoAvailable".}
proc fcQPlainTextEdit_redoAvailable(self: pointer, b: bool): void {.importc: "QPlainTextEdit_redoAvailable".}
proc fQPlainTextEdit_connect_redoAvailable(self: pointer, slot: int) {.importc: "QPlainTextEdit_connect_redoAvailable".}
proc fcQPlainTextEdit_copyAvailable(self: pointer, b: bool): void {.importc: "QPlainTextEdit_copyAvailable".}
proc fQPlainTextEdit_connect_copyAvailable(self: pointer, slot: int) {.importc: "QPlainTextEdit_connect_copyAvailable".}
proc fcQPlainTextEdit_selectionChanged(self: pointer, ): void {.importc: "QPlainTextEdit_selectionChanged".}
proc fQPlainTextEdit_connect_selectionChanged(self: pointer, slot: int) {.importc: "QPlainTextEdit_connect_selectionChanged".}
proc fcQPlainTextEdit_cursorPositionChanged(self: pointer, ): void {.importc: "QPlainTextEdit_cursorPositionChanged".}
proc fQPlainTextEdit_connect_cursorPositionChanged(self: pointer, slot: int) {.importc: "QPlainTextEdit_connect_cursorPositionChanged".}
proc fcQPlainTextEdit_updateRequest(self: pointer, rect: pointer, dy: cint): void {.importc: "QPlainTextEdit_updateRequest".}
proc fQPlainTextEdit_connect_updateRequest(self: pointer, slot: int) {.importc: "QPlainTextEdit_connect_updateRequest".}
proc fcQPlainTextEdit_blockCountChanged(self: pointer, newBlockCount: cint): void {.importc: "QPlainTextEdit_blockCountChanged".}
proc fQPlainTextEdit_connect_blockCountChanged(self: pointer, slot: int) {.importc: "QPlainTextEdit_connect_blockCountChanged".}
proc fcQPlainTextEdit_modificationChanged(self: pointer, param1: bool): void {.importc: "QPlainTextEdit_modificationChanged".}
proc fQPlainTextEdit_connect_modificationChanged(self: pointer, slot: int) {.importc: "QPlainTextEdit_connect_modificationChanged".}
proc fcQPlainTextEdit_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QPlainTextEdit_tr2".}
proc fcQPlainTextEdit_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QPlainTextEdit_tr3".}
proc fcQPlainTextEdit_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QPlainTextEdit_trUtf82".}
proc fcQPlainTextEdit_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QPlainTextEdit_trUtf83".}
proc fcQPlainTextEdit_find22(self: pointer, exp: struct_miqt_string, options: cint): bool {.importc: "QPlainTextEdit_find22".}
proc fcQPlainTextEdit_find23(self: pointer, exp: pointer, options: cint): bool {.importc: "QPlainTextEdit_find23".}
